@@ -32,7 +32,7 @@ import software.amazon.awscdk.services.iam.Effect;
 import software.amazon.awscdk.services.iam.ManagedPolicy;
 import software.amazon.awscdk.services.iam.PolicyStatement;
 import software.amazon.awscdk.services.lambda.IFunction;
-import software.amazon.awscdk.services.logs.LogGroup;
+import software.amazon.awscdk.services.logs.ILogGroup;
 import software.amazon.awscdk.services.logs.RetentionDays;
 import software.amazon.awscdk.services.sns.Topic;
 import software.amazon.awscdk.services.sqs.Queue;
@@ -42,6 +42,7 @@ import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
 import software.amazon.awssdk.services.s3.S3Client;
 import software.constructs.Construct;
 
+import sleeper.cdk.stack.CoreStacks;
 import sleeper.core.SleeperVersion;
 import sleeper.core.properties.instance.CdkDefinedInstanceProperty;
 import sleeper.core.properties.instance.InstanceProperties;
@@ -63,7 +64,6 @@ import java.util.stream.Stream;
 import static sleeper.core.properties.instance.CdkDefinedInstanceProperty.CONFIG_BUCKET;
 import static sleeper.core.properties.instance.CdkDefinedInstanceProperty.VERSION;
 import static sleeper.core.properties.instance.CommonProperty.ID;
-import static sleeper.core.properties.instance.CommonProperty.LOG_RETENTION_IN_DAYS;
 import static sleeper.core.properties.instance.CommonProperty.RETAIN_INFRA_AFTER_DESTROY;
 import static sleeper.core.properties.instance.CommonProperty.STACK_TAG_NAME;
 import static sleeper.core.properties.instance.DashboardProperty.DASHBOARD_TIME_WINDOW_MINUTES;
@@ -112,7 +112,11 @@ public class Utils {
                 .filter(instanceProperties::isSet)
                 .forEach(s -> sb.append("-D").append(s.getPropertyName())
                         .append("=").append(instanceProperties.get(s)).append(" "));
-
+        Stream.of("java.base/java.nio=ALL-UNNAMED",
+                "java.base/sun.nio.ch=ALL-UNNAMED",
+                "java.base/java.util=ALL-UNNAMED",
+                "java.base/java.lang.invoke=ALL-UNNAMED")
+                .forEach(s -> sb.append("--add-opens=").append(s).append(" "));
         return sb.toString();
     }
 
@@ -125,67 +129,31 @@ public class Utils {
      * @return            the cleaned up instance ID
      */
     public static String cleanInstanceId(InstanceProperties properties) {
-        return properties.get(ID)
-                .toLowerCase(Locale.ROOT)
+        return cleanInstanceId(properties.get(ID));
+    }
+
+    public static String cleanInstanceId(String instanceId) {
+        return instanceId.toLowerCase(Locale.ROOT)
                 .replace(".", "-");
     }
 
-    /**
-     * Configures a log group with the specified number of days. Valid values are taken from
-     * <a href=
-     * "https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-logs-loggroup.html">here</a>.
-     * A value of -1 represents an infinite number of days.
-     *
-     * @param  numberOfDays number of days you want to retain the logs
-     * @return              The RetentionDays equivalent
-     */
-    public static LogGroup createLogGroupWithRetentionDays(Construct scope, String id, int numberOfDays) {
-        return LogGroup.Builder.create(scope, id)
-                .retention(getRetentionDays(numberOfDays))
-                .build();
+    public static LogDriver createECSContainerLogDriver(CoreStacks coreStacks, String id) {
+        ILogGroup logGroup = coreStacks.getLogGroupByECSLogDriverId(id);
+        return LogDriver.awsLogs(AwsLogDriverProps.builder()
+                .streamPrefix(logGroup.getLogGroupName())
+                .logGroup(logGroup)
+                .build());
     }
 
-    public static LogGroup createLambdaLogGroup(
-            Construct scope, String id, String functionName, InstanceProperties instanceProperties) {
-        return LogGroup.Builder.create(scope, id)
-                .logGroupName(functionName)
-                .retention(getRetentionDays(instanceProperties.getInt(LOG_RETENTION_IN_DAYS)))
-                .build();
-    }
-
-    public static LogGroup createCustomResourceProviderLogGroup(
-            Construct scope, String id, String functionName, InstanceProperties instanceProperties) {
-        return LogGroup.Builder.create(scope, id)
-                .logGroupName(functionName + "-provider")
-                .retention(getRetentionDays(instanceProperties.getInt(LOG_RETENTION_IN_DAYS)))
-                .build();
-    }
-
-    public static LogDriver createECSContainerLogDriver(Construct scope, InstanceProperties instanceProperties, String id) {
-        String logGroupName = String.join("-", "sleeper", cleanInstanceId(instanceProperties), id);
-        AwsLogDriverProps logDriverProps = AwsLogDriverProps.builder()
-                .streamPrefix(logGroupName)
-                .logGroup(LogGroup.Builder.create(scope, id)
-                        .logGroupName(logGroupName)
-                        .retention(getRetentionDays(instanceProperties.getInt(LOG_RETENTION_IN_DAYS)))
-                        .build())
-                .build();
-        return LogDriver.awsLogs(logDriverProps);
-    }
-
-    public static LogOptions createStateMachineLogOptions(Construct scope, String id, InstanceProperties instanceProperties) {
-        String logGroupName = String.join("-", "sleeper", cleanInstanceId(instanceProperties), id);
+    public static LogOptions createStateMachineLogOptions(CoreStacks coreStacks, String id) {
         return LogOptions.builder()
-                .destination(LogGroup.Builder.create(scope, id)
-                        .logGroupName(logGroupName)
-                        .retention(getRetentionDays(instanceProperties.getInt(LOG_RETENTION_IN_DAYS)))
-                        .build())
+                .destination(coreStacks.getLogGroupByStateMachineId(id))
                 .level(LogLevel.ALL)
                 .includeExecutionData(true)
                 .build();
     }
 
-    private static RetentionDays getRetentionDays(int numberOfDays) {
+    public static RetentionDays getRetentionDays(int numberOfDays) {
         switch (numberOfDays) {
             case -1:
                 return RetentionDays.INFINITE;
